fixed up the title in the heading

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>HTML 101</title>
 </head>
 <body>
-    <h1>My Small Business</h1>
+    <h1>My Small Business 2</h1>
     
     <p>Our small pet business loves to feed your animals
         WE have weekly specials and offer healthy foods for your pets
